--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
       <div class="hero-actions">
         <button class="cta neumorph" data-i18n="hero.projects">View Projects</button>
         <button class="cta neumorph" data-i18n="hero.contact">Contact Me</button>
+        <a href="assets/cv.pdf" download class="cta neumorph" style="text-decoration:none;display:inline-block;">
+          <i class="fas fa-download"></i> Download CV
+        </a>
       </div>
     </section>
     <!-- About Me -->
@@ -122,12 +125,36 @@
     <section id="projects" class="section neumorph responsive-projects" data-aos="fade-up">
       <h2 data-i18n="projects.title">Projects</h2>
       <div class="projects-grid">
-        <div class="project-card neumorph" data-aos="zoom-in"></div>
-        <div class="project-card neumorph" data-aos="zoom-in"></div>
-        <div class="project-card neumorph" data-aos="zoom-in"></div>
-        <div class="project-card neumorph" data-aos="zoom-in"></div>
-        <div class="project-card neumorph" data-aos="zoom-in"></div>
-        <div class="project-card neumorph" data-aos="zoom-in"></div>
+        <div class="project-card neumorph" data-aos="zoom-in">
+          <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80" alt="Project 1" class="project-img" />
+          <h3>Portfolio Website</h3>
+          <a href="#" target="_blank" class="project-link">Live Demo</a>
+        </div>
+        <div class="project-card neumorph" data-aos="zoom-in">
+          <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=600&q=80" alt="Project 2" class="project-img" />
+          <h3>Landing Page</h3>
+          <a href="#" target="_blank" class="project-link">Live Demo</a>
+        </div>
+        <div class="project-card neumorph" data-aos="zoom-in">
+          <img src="https://images.unsplash.com/photo-1519125323398-675f0ddb6308?auto=format&fit=crop&w=600&q=80" alt="Project 3" class="project-img" />
+          <h3>Dashboard UI</h3>
+          <a href="#" target="_blank" class="project-link">Live Demo</a>
+        </div>
+        <div class="project-card neumorph" data-aos="zoom-in">
+          <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=600&q=80" alt="Project 4" class="project-img" />
+          <h3>E-commerce Store</h3>
+          <a href="#" target="_blank" class="project-link">Live Demo</a>
+        </div>
+        <div class="project-card neumorph" data-aos="zoom-in">
+          <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=600&q=80" alt="Project 5" class="project-img" />
+          <h3>Blog Platform</h3>
+          <a href="#" target="_blank" class="project-link">Live Demo</a>
+        </div>
+        <div class="project-card neumorph" data-aos="zoom-in">
+          <img src="https://images.unsplash.com/photo-1519985176271-adb1088fa94c?auto=format&fit=crop&w=600&q=80" alt="Project 6" class="project-img" />
+          <h3>Mobile App UI</h3>
+          <a href="#" target="_blank" class="project-link">Live Demo</a>
+        </div>
       </div>
     </section>
     <!-- Services -->
